# cpp-seriesDetect

./: CMakeLists.txt  Makefile  arthmetic.cpp  main.cpp  number.h  readme  sampleSequence.h  series.cpp  series.h  structures.h  test.cpp  test2.cpp  tools.cpp
creator/: CMakeLists.txt  arthSequence.cpp  fibonacci.cpp  geoSequence.cpp  geometric.cpp  harmoSequence.cpp  harmonic.cpp  power.cpp  prime.cpp  quadratic.cpp  sampleSequence.h  squareNumbers.cpp  triangular.cpp
setup/: CMakeLists.txt  number.cpp  number.h  sampleSequence.h  sequence.cpp  sequence.h
tests/: test.cpp  test3.cpp  test4.cpp
